@@ -1,5 +1,9 @@
 2010-05-03  Takashi Masuda  <masutaka@nifty.com>
 
+	* twittering-mode.el: Tweet する時に y-or-n-p で問い合わせを出来る
+	ようにした。デフォルトは聞かれない。
+	(twittering-ask-post): new variable
+
 	* twittering-mode.el: `V' の補完対象に :direct_messages や :home を
 	追加した。
 	(twittering-read-timeline-spec-with-completion): dummy-hist に追加。
